--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,7 @@
     "@types/uuid": "^8.3.1",
     "aws-cdk": "1.120.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.2",
-    "uuid": "^3.4.0"
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "@aws-cdk/aws-appsync": "^1.119.0",
